--- a/YelpCamp/views/campgrounds/edit.ejs
+++ b/YelpCamp/views/campgrounds/edit.ejs
@@ -1,12 +1,13 @@
 <% layout('layouts/boilerplate') %>
 <div class="row">
   <h1 class="text-center">Edit Campground</h1>
-  <div class="col-6 offset-3">
+  <div class="col-md-6 offset-md-3">
     <form
       action="/campgrounds/<%= campground._id %>?_method=PUT"
       method="POST"
       novalidate
       class="validated-form"
+      enctype="multipart/form-data"
     >
       <div class="mb-3">
         <label class="form-label" for="title">Title</label>
@@ -28,18 +29,6 @@
           id="location"
           name="campground[location]"
           value="<%= campground.location %>"
-          required
-        />
-        <div class="valid-feedback">Looks GOOD!!!!</div>
-      </div>
-      <div class="mb-3">
-        <label class="form-label" for="image">Image Url</label>
-        <input
-          class="form-control"
-          type="text"
-          id="image"
-          name="campground[image]"
-          value="<%= campground.image %>"
           required
         />
         <div class="valid-feedback">Looks GOOD!!!!</div>
@@ -72,9 +61,35 @@
           name="campground[description]"
           required
         >
-<%= campground.description %></textarea
-        >
+<%= campground.description %>
+        </textarea>
         <div class="valid-feedback">Looks GOOD!!!!</div>
+      </div>
+      <div class="mb-5 custom-file">
+        <label for="image" class="form-label">Add more Images</label>
+        <input
+          class="form-control"
+          type="file"
+          id="image"
+          name="image"
+          multiple
+        />
+        <label for="image" class="custom-file-label text-muted"></label>
+      </div>
+      <h6>Delete Images:</h6>
+      <div class="mb-3">
+        <% campground.images.forEach(function(img, i) { %>
+        <img src="<%= img.thumbnail %>" class="img-thumbnail" alt="" />
+        <div class="form-check-inline mt-auto">
+          <input
+            type="checkbox"
+            id="image-<%= i %>"
+            name="deleteImages[]"
+            value="<%= img.filename %>"
+          />
+        </div>
+        <label for="image-<%= i %>">Delete?</label>
+        <% }) %>
       </div>
       <div class="mb-3">
         <button class="btn btn-info">Update</button>
