--- a/YelpCamp/views/campgrounds/index.ejs
+++ b/YelpCamp/views/campgrounds/index.ejs
@@ -1,14 +1,24 @@
 <% layout('layouts/boilerplate') %>
+<div id="cluster-map"></div>
 <h1>All Campgrounds</h1>
 <div>
   <a href="/campgrounds/new">Add Campground</a>
 </div>
 <ul>
   <% for (let campground of campgrounds) { %>
-  <div class="card" mb-3>
+  <div class="card mb-3">
     <div class="row">
       <div class="col-md-4">
-        <img class="img-fluid" alt="" src="<%= campground.image %>" />
+        <% if (campground.images.length) { %>
+        <img
+          crossorigin="anonymous"
+          class="img-fluid"
+          alt=""
+          src="<%= campground.images[0].url %>"
+        />
+        <% } else { %>
+        <img class="img-fluid" alt="" src="" />
+        <% } %>
       </div>
       <div class="col-md-8">
         <div class="card-body">
@@ -26,3 +36,9 @@
   </div>
   <% } %>
 </ul>
+
+<script>
+  const maptilerApiKey = "<%- process.env.MAPTILER_API_KEY %>";
+  const campgrounds = { features: <%- JSON.stringify(campgrounds) %>}
+</script>
+<script src="/javascripts/clusterMap.js"></script>
