--- a/YelpCamp/views/campgrounds/new.ejs
+++ b/YelpCamp/views/campgrounds/new.ejs
@@ -1,8 +1,14 @@
 <% layout('layouts/boilerplate') %>
 <div class="row">
   <h1 class="text-center">New Campground</h1>
-  <div class="col-6 offset-3">
-    <form action="/campgrounds" method="POST" novalidate class="validated-form">
+  <div class="col-md-6 offset-md-3">
+    <form
+      action="/campgrounds"
+      method="POST"
+      novalidate
+      class="validated-form"
+      enctype="multipart/form-data"
+    >
       <div class="mb-3">
         <label class="form-label" for="title">Title</label>
         <input
@@ -25,7 +31,7 @@
         />
         <div class="valid-feedback">Looks GOOD!!!!</div>
       </div>
-      <div class="mb-3">
+      <!-- <div class="mb-3">
         <label class="form-label" for="image">Image Url</label>
         <input
           class="form-control"
@@ -35,7 +41,7 @@
           required
         />
         <div class="valid-feedback">Looks GOOD!!!!</div>
-      </div>
+      </div> -->
       <div class="mb-3">
         <label for="" class="form-label" for="price">Campground Price</label>
         <div class="input-group">
@@ -64,6 +70,17 @@
           required
         ></textarea>
         <div class="valid-feedback">Looks GOOD!!!!</div>
+      </div>
+      <div class="mb-5 custom-file">
+        <label for="image" class="form-label">Choose Images</label>
+        <input
+          class="form-control"
+          type="file"
+          id="image"
+          name="image"
+          multiple
+        />
+        <label for="image" class="custom-file-label text-muted"></label>
       </div>
       <div class="mb-3">
         <button class="btn btn-success">Add</button>
