--- a/YelpCamp/views/campgrounds/show.ejs
+++ b/YelpCamp/views/campgrounds/show.ejs
@@ -1,9 +1,69 @@
 <% layout('layouts/boilerplate') %>
+<link rel="stylesheet" href="/stylesheets/stars.css" />
 
 <div class="row">
   <div class="col-6">
+    <div id="campgroundCarousel" class="carousel slide">
+      <div class="carousel-indicators">
+        <!-- <button
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide-to="0"
+          class="active"
+          aria-current="true"
+          aria-label="Slide 1"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide-to="1"
+          aria-label="Slide 2"
+        ></button> -->
+        <% campground.images.forEach((img, i) => { %>
+        <button
+          type="button"
+          data-bs-target="#campgroundCarousel"
+          data-bs-slide-to="<%= i %>"
+          class="<%= i === 0 ? 'active' : '' %>"
+          aria-current="true"
+          aria-label="Slide <%= i %>"
+        ></button>
+        <% }) %>
+      </div>
+      <div class="carousel-inner">
+        <% campground.images.forEach((img, i) => { %>
+        <div class="carousel-item <%= i === 0 ? 'active' : '' %>">
+          <img
+            crossorigin="anonymous"
+            src="<%= img.url %>"
+            class="d-block w-100"
+            alt=""
+          />
+        </div>
+        <% }) %>
+      </div>
+      <% if (campground.images.length > 1) { %>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#campgroundCarousel"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#campgroundCarousel"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+      <% } %>
+    </div>
     <div class="card mb-3">
-      <img src="<%= campground.image %>" class="card-img-top" alt="..." />
       <div class="card-body">
         <h5 class="card-title"><%= campground.title %></h5>
         <p class="card-text"><%= campground.description %></p>
@@ -12,8 +72,12 @@
         <li class="list-group-item text-secondary">
           <%= campground.location %>
         </li>
+        <li class="list-group-item">
+          Submitted by : <%= campground.author.username %>
+        </li>
         <li class="list-group-item">$<%= campground.price %> /night</li>
       </ul>
+      <% if (currentUser && campground.author.equals(currentUser._id)) { %>
       <div class="card-body">
         <a
           class="card-link btn btn-primary"
@@ -28,12 +92,15 @@
           <button class="btn btn-danger">Delete</button>
         </form>
       </div>
+      <% } %>
       <div class="card-footer text-secondary">
         <a href="/campgrounds">All Campgrounds</a>
       </div>
     </div>
   </div>
   <div class="col-6">
+    <div id="map"></div>
+    <% if (currentUser) { %>
     <h2>Leave a Review</h2>
     <form
       action="/campgrounds/<%= campground._id %>/reviews"
@@ -41,7 +108,7 @@
       class="mb-3 validated-form"
       novalidate
     >
-      <div class="mb-3">
+      <!-- <div class="mb-3">
         <label class="form-label" for="rating">Rating</label>
         <input
           class="form-range"
@@ -51,9 +118,58 @@
           name="review[rating]"
           id="rating"
         />
-      </div>
+      </div> -->
       <div class="mb-3">
-        <label class="form-label" for="body">Review</label>
+        <fieldset class="starability-basic">
+          <input
+            type="radio"
+            id="no-rate"
+            class="input-no-rate"
+            name="review[rating]"
+            value="1"
+            checked
+            aria-label="No rating."
+          />
+          <input
+            type="radio"
+            id="first-rate1"
+            name="review[rating]"
+            value="1"
+          />
+          <label for="first-rate1" title="Terrible">1 star</label>
+          <input
+            type="radio"
+            id="first-rate2"
+            name="review[rating]"
+            value="2"
+          />
+          <label for="first-rate2" title="Not good">2 stars</label>
+          <input
+            type="radio"
+            id="first-rate3"
+            name="review[rating]"
+            value="3"
+          />
+          <label for="first-rate3" title="Average">3 stars</label>
+          <input
+            type="radio"
+            id="first-rate4"
+            name="review[rating]"
+            value="4"
+          />
+          <label for="first-rate4" title="Very good">4 stars</label>
+          <input
+            type="radio"
+            id="first-rate5"
+            name="review[rating]"
+            value="5"
+          />
+          <label for="first-rate5" title="Amazing">5 stars</label>
+        </fieldset>
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label" for="body">Review Text</label>
         <textarea
           class="form-control"
           name="review[body]"
@@ -64,19 +180,33 @@
       </div>
       <button class="btn btn-success">Submit</button>
     </form>
-    <% for (let review of campground.reviews) {%>
+    <% } %> <% for (let review of campground.reviews) {%>
     <div class="card mb-3">
       <div class="card-body">
         <h5 class="card-title">Rating: <%= review.rating %></h5>
+        <p class="starability-result" data-rating="<%= review.rating %>">
+          Rated: <%= review.rating %> stars
+        </p>
+        <h6 class="card-subtitle mb-2 text-secondary">
+          By <%= review.author.username %>
+        </h6>
         <p class="card-text">Review: <%= review.body %></p>
+        <% if (currentUser && review.author.equals(currentUser._id)) { %>
         <form
           action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE"
           method="POST"
         >
           <button class="btn btn-sm btn-danger">Delete</button>
         </form>
+        <% } %>
       </div>
     </div>
     <% } %>
   </div>
 </div>
+
+<script>
+  const maptilerApiKey = "<%- process.env.MAPTILER_API_KEY %>";
+  const campground = <%- JSON.stringify(campground) %>;
+</script>
+<script src="/javascripts/showPageMap.js"></script>
