--- a/YelpCamp/views/layouts/boilerplate.ejs
+++ b/YelpCamp/views/layouts/boilerplate.ejs
@@ -4,11 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
+      crossorigin="anonymous"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
     />
+    <script
+      crossorigin="anonymous"
+      src="https://cdn.maptiler.com/maptiler-sdk-js/v2.0.3/maptiler-sdk.umd.min.js"
+    ></script>
+    <link
+      crossorigin="anonymous"
+      href="https://cdn.maptiler.com/maptiler-sdk-js/v2.0.3/maptiler-sdk.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/stylesheets/app.css" />
     <title>Boilerplate</title>
   </head>
   <body class="d-flex flex-column vh-100">
@@ -24,9 +34,13 @@
       crossorigin="anonymous"
     ></script>
     <script
+      crossorigin="anonymous"
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
       integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+    ></script>
+    <script
       crossorigin="anonymous"
+      src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.min.js"
     ></script>
 
     <script src="/javascripts/validateForm.js"></script>
